src/objects/Case_Status_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Is_For_AMC_Tagging_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is For AMC Tagging Rules?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Required_for_AMC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required for AMC?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Valid_for_AMC_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked if status is allowed for checking AMC Service</description>
        <label>Is Valid for AMC Service?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Valid_for_Document_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Valid for Document Bundle?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Valid_for_Full_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Valid for Full Bundle?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Valid_for_Processing_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Valid for Processing Bundle?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Valid_for_Technical_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Valid for Technical Bundle?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Application_Journey_Remarks__c</fullName>
        <description>IF Pre-Survey FO Scheduled, Meter Socket Delivery FO Scheduled, Inspection FO Scheduled, Re-Inspection FO Scheduled, use FO Recordtype DeveloperName
IF  Pre-survey FO Resolved – Not Feasible, Meter Socket Not Delivered, Inspection FO Resolved – Disapproved, Re-inspection FO Resolved - Disapproved, &quot;Please check your email.&quot;</description>
        <label>Service Application Journey Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Application_Journey__c</fullName>
        <label>Service Application Journey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Status Setting</label>
    <pluralLabel>Case Status Settings</pluralLabel>
</CustomObject>